search: move SearchBar out of AuxPanel to avoid overflow issues with Autocomplete

--- a/res/css/structures/_RoomView.scss
+++ b/res/css/structures/_RoomView.scss
@@ -56,6 +56,7 @@ limitations under the License.
     width: 100%;
     margin: 0px auto;
 
+    overflow: auto;
     flex: 0 0 auto;
 }
 
